--- a/src/_fonts.sass
+++ b/src/_fonts.sass
@@ -7,3 +7,9 @@
 @font-face
   font-family: "FuturaPTBook"
   src : url("/fonts/FuturaPTBook.otf")
+@font-face
+  font-family: "FuturaPTExtraBold"
+  src : url("/fonts/FuturaPTExtraBold.otf")
+@font-face
+  font-family: 'FuturaPTLight'
+  src : url("/fonts/FuturaPTLight.otf")
