--- a/src/style.sass
+++ b/src/style.sass
@@ -192,3 +192,63 @@ header
     border-style: solid
     background-color:  #f6f6f6
     text-decoration: none
+
+.carousel
+  height: 500px
+  border-radius: 50%
+  .carousel-indicators li
+    border-width: 2px
+    border-color:  rgb(204, 204, 204)
+    border-style: solid
+    background-color:  #ffffff
+    width: 18px
+    height: 18px
+    box-sizing: border-box
+    margin: 0px 15px
+
+
+  .carousel-indicators li.active:before
+    content: ''
+    border-radius: 50%
+    background-color:  #df2400
+    width: 10px
+    height: 10px
+    display: block
+    opacity: 1
+    margin: 2px 2px
+  .carousel-caption
+    text-shadow: none
+    h3
+      font-family: FuturaPTHeavy
+      color:  #000000
+      font-size: 35.99px
+      font-weight: 800
+      line-height: 48px
+    p
+      font-family: 'FuturaPTLight'
+      color:  #000000
+      font-size: 22px
+      font-weight: 300
+      line-height: 24px
+    a
+      border-radius: 3px
+      font-family: FuturaPTExtraBold
+      background-color:  #d52b1e
+      width: 119px
+      height: 37px
+      color: white
+      display: block
+      text-align: center
+      line-height: 37px
+      text-decoration: none
+      text-transform: uppercase
+      font-size: 12px
+  .guitar
+    right: 0
+    left: 50%
+    max-width: 400px
+    text-align: left
+    top: 50%
+    bottom: auto
+    transform: translateY(-50%)
+
