--- a/src/_fonts.sass
+++ b/src/_fonts.sass
@@ -13,3 +13,7 @@
 @font-face
   font-family: 'FuturaPTLight'
   src : url("/fonts/FuturaPTLight.otf")
+
+@font-face
+  font-family: 'Roboto'
+  src : url("/fonts/Roboto.ttf")
