--- a/app/css/style.css
+++ b/app/css/style.css
@@ -18,6 +18,10 @@
   font-family: 'FuturaPTLight';
   src: url("/fonts/FuturaPTLight.otf"); }
 
+@font-face {
+  font-family: 'Roboto';
+  src: url("/fonts/Roboto.ttf"); }
+
 ul {
   -webkit-padding-start: 0px;
   margin-bottom: 0; }
@@ -261,3 +265,168 @@ header {
     top: 50%;
     bottom: auto;
     transform: translateY(-50%); }
+
+.caption {
+  font-family: FuturaPT;
+  color: #d62718;
+  font-size: 24px;
+  font-weight: 300;
+  text-transform: uppercase;
+  padding: 0px;
+  margin: 60px 0px 40px 0px; }
+
+.main-page-catalog {
+  background: #ebebeb; }
+  .main-page-catalog .catalog-block {
+    border-radius: 4px;
+    background-color: #ffffff;
+    max-width: 277px;
+    height: 277px;
+    margin-right: 20px;
+    margin-bottom: 20px;
+    position: relative; }
+    .main-page-catalog .catalog-block .catalog-block-caption {
+      font-family: FuturaPT;
+      color: #000000;
+      font-size: 18px;
+      font-weight: 300;
+      line-height: 21px;
+      position: absolute;
+      left: 17px;
+      top: 15px;
+      z-index: 10;
+      max-width: 10em;
+      text-transform: uppercase; }
+    .main-page-catalog .catalog-block .img {
+      position: absolute;
+      transform: translate(-50%, -50%);
+      left: 50%;
+      top: 50%;
+      z-index: 5; }
+  .main-page-catalog .catalog-block:hover .catalog-block-caption {
+    color: #df2400;
+    transition: 0.5s; }
+  .main-page-catalog .catalog-block:nth-child(5), .main-page-catalog .catalog-block:nth-child(9), .main-page-catalog .catalog-block:nth-child(13) {
+    margin-right: 0px; }
+  .main-page-catalog .catalog-block:last-of-type {
+    margin-bottom: 60px; }
+
+.main-page-carousel .item {
+  display: flex;
+  justify-content: space-between; }
+
+.main-page-carousel .carousel-product-block:hover .carousel-product-block-cart {
+  display: block; }
+
+.main-page-carousel .carousel-product-block:hover {
+  -webkit-box-shadow: 0px 6px 9px -1px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 6px 9px -1px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 6px 9px -1px rgba(0, 0, 0, 0.75);
+  height: auto; }
+
+.main-page-carousel .carousel-product-block {
+  border-radius: 2px;
+  border-width: 1px;
+  border-color: #cccccc;
+  border-style: solid;
+  width: 216px;
+  height: 360px;
+  transition: all 1s; }
+  .main-page-carousel .carousel-product-block a {
+    text-decoration: none; }
+  .main-page-carousel .carousel-product-block .carousel-product-block-img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px 0px;
+    position: relative; }
+    .main-page-carousel .carousel-product-block .carousel-product-block-img .carousel-product-block-img-action {
+      height: 49px;
+      width: 49px;
+      background: url("../img/main-carousel/Vector Smart Object.png");
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-family: FuturaPT;
+      color: #ffffff;
+      font-size: 14px;
+      font-weight: 300;
+      position: absolute;
+      left: 10px;
+      bottom: 10px; }
+  .main-page-carousel .carousel-product-block .carousel-product-block-caption {
+    background-color: #e3462c;
+    height: 24px;
+    padding-left: 1.5em;
+    font-family: FuturaPTBook;
+    color: #ffffff;
+    font-size: 13px;
+    font-weight: 300;
+    text-transform: uppercase;
+    line-height: 24px; }
+  .main-page-carousel .carousel-product-block .carousel-product-block-info {
+    margin-left: 1.5em;
+    max-width: 160px;
+    word-break: break-all;
+    margin-top: 20px;
+    margin-bottom: 10px;
+    font-family: Roboto;
+    color: #000000;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 21px;
+    text-align: left; }
+  .main-page-carousel .carousel-product-block .carousel-product-block-price {
+    margin-left: 1.5em;
+    margin-top: 10px;
+    margin-bottom: 10px; }
+    .main-page-carousel .carousel-product-block .carousel-product-block-price .discount-price {
+      font-family: FuturaPT;
+      color: #df2400;
+      font-size: 16px;
+      font-weight: 300;
+      text-align: left; }
+    .main-page-carousel .carousel-product-block .carousel-product-block-price .old-price {
+      font-family: FuturaPT;
+      color: #1c1f1f;
+      font-size: 16px;
+      font-weight: 300;
+      text-decoration: line-through;
+      margin-left: 1em; }
+
+.main-page-carousel .carousel-product-block-cart {
+  border-bottom-left-radius: 2px;
+  border-bottom-right-radius: 2px;
+  background-color: #f2f2f2;
+  height: 40px;
+  display: none; }
+  .main-page-carousel .carousel-product-block-cart .hover-block {
+    display: flex;
+    height: 100%; }
+    .main-page-carousel .carousel-product-block-cart .hover-block li {
+      width: 34%;
+      list-style: none;
+      border-right: solid 1px rgba(204, 204, 204, 0.5);
+      display: flex;
+      justify-content: center;
+      align-items: center; }
+    .main-page-carousel .carousel-product-block-cart .hover-block .add-to-compare {
+      border-right: 0px; }
+      .main-page-carousel .carousel-product-block-cart .hover-block .add-to-compare span {
+        width: 18px;
+        height: 20px;
+        display: block;
+        background: url("../img/wishlist.png");
+        background-position: 100% -1px; }
+    .main-page-carousel .carousel-product-block-cart .hover-block .add-to-cart span {
+      width: 23px;
+      height: 23px;
+      display: block;
+      background: url("../img/wishlist.png");
+      background-position: -71px; }
+    .main-page-carousel .carousel-product-block-cart .hover-block .add-to-favorite span {
+      width: 23px;
+      height: 23px;
+      display: block;
+      background: url("../img/wishlist.png");
+      background-position: 0px; }
