--- a/src/style.sass
+++ b/src/style.sass
@@ -252,3 +252,182 @@ header
     bottom: auto
     transform: translateY(-50%)
 
+.caption
+  font-family: $font-main
+  color:  #d62718
+  font-size: 24px
+  font-weight: 300
+  text-transform: uppercase
+  padding: 0px
+  margin: 60px 0px 40px 0px
+
+.main-page-catalog
+  background: #ebebeb
+  .catalog-block
+    border-radius: 4px
+    background-color:  #ffffff
+    max-width: 277px
+    height: 277px
+    margin-right: 20px
+    margin-bottom: 20px
+    position: relative
+    .catalog-block-caption
+      font-family: $font-main
+      color:  #000000
+      font-size: 18px
+      font-weight: 300
+      line-height: 21px
+      position: absolute
+      left: 17px
+      top: 15px
+      z-index: 10
+      max-width: 10em
+      text-transform: uppercase
+    .img
+      position: absolute
+      transform: translate(-50%, -50%)
+      left: 50%
+      top: 50%
+      z-index: 5
+
+  .catalog-block:hover .catalog-block-caption
+    color: $primary-color
+    transition: 0.5s
+
+  .catalog-block:nth-child(5),.catalog-block:nth-child(9),.catalog-block:nth-child(13)
+    margin-right: 0px
+  .catalog-block:last-of-type
+    margin-bottom: 60px
+
+.main-page-carousel
+  .item
+    display: flex
+    justify-content: space-between
+
+  .carousel-product-block:hover .carousel-product-block-cart
+    display: block
+
+  .carousel-product-block:hover
+    -webkit-box-shadow: 0px 6px 9px -1px rgba(0,0,0,0.75)
+    -moz-box-shadow: 0px 6px 9px -1px rgba(0,0,0,0.75)
+    box-shadow: 0px 6px 9px -1px rgba(0,0,0,0.75)
+    height: auto
+
+  .carousel-product-block
+    border-radius: 2px
+    border-width: 1px
+    border-color:  #cccccc
+    border-style: solid
+    width: 216px
+    height: 360px
+    transition: all 1s
+
+
+    a
+      text-decoration: none
+
+    .carousel-product-block-img
+      display: flex
+      justify-content: center
+      align-items: center
+      padding: 10px 0px
+      position: relative
+
+      .carousel-product-block-img-action
+        height: 49px
+        width: 49px
+        background: url("../img/main-carousel/Vector Smart Object.png")
+        display: flex
+        justify-content: center
+        align-items: center
+        font-family: $font-main
+        color:  #ffffff
+        font-size: 14px
+        font-weight: 300
+        position: absolute
+        left: 10px
+        bottom: 10px
+
+    .carousel-product-block-caption
+      background-color:  #e3462c
+      height: 24px
+      padding-left: 1.5em
+      font-family: FuturaPTBook
+      color:  #ffffff
+      font-size: 13px
+      font-weight: 300
+      text-transform: uppercase
+      line-height: 24px
+
+    .carousel-product-block-info
+      margin-left: 1.5em
+      max-width: 160px
+      word-break: break-all
+      margin-top: 20px
+      margin-bottom: 10px
+      font-family: Roboto
+      color:  #000000
+      font-size: 14px
+      font-weight: 400
+      line-height: 21px
+      text-align: left
+
+    .carousel-product-block-price
+      margin-left: 1.5em
+      margin-top: 10px
+      margin-bottom: 10px
+
+      .discount-price
+        font-family: $font-main
+        color:  $primary-color
+        font-size: 16px
+        font-weight: 300
+        text-align: left
+
+      .old-price
+        font-family: $font-main
+        color:  #1c1f1f
+        font-size: 16px
+        font-weight: 300
+        text-decoration: line-through
+        margin-left: 1em
+
+  .carousel-product-block-cart
+    border-bottom-left-radius: 2px
+    border-bottom-right-radius: 2px
+    background-color:  #f2f2f2
+    height: 40px
+    display: none
+    .hover-block
+      display: flex
+      height: 100%
+      li
+        width: 34%
+        list-style: none
+        border-right: solid 1px rgba(204, 204, 204, 0.5)
+        display: flex
+        justify-content: center
+        align-items: center
+      .add-to-compare
+        border-right: 0px
+        span
+          width: 18px
+          height: 20px
+          display: block
+          background: url("../img/wishlist.png")
+          background-position: 100% -1px;
+      .add-to-cart
+        span
+          width: 23px
+          height: 23px
+          display: block
+          background: url("../img/wishlist.png")
+          background-position: -71px
+
+      .add-to-favorite
+        span
+          width: 23px
+          height: 23px
+          display: block
+          background: url("../img/wishlist.png")
+          background-position: 0px
