--- a/src/style.sass
+++ b/src/style.sass
@@ -300,9 +300,35 @@ header
     margin-bottom: 60px
 
 .main-page-carousel
-  .item
+  .carousel-inner
+    margin-top: 40px
+
+  .item-container
     display: flex
     justify-content: space-between
+
+  .carousel-indicators
+    left: 0
+    width: 100%
+    margin-left: 0px
+    display: flex
+    top: 0px
+    position: static
+    li
+      border-radius: 0px
+      height: 2px
+      background: #000000
+      margin: 0
+      border: 0px
+      padding: 0
+      display: inline-block
+      width: 55%
+    li.active
+      background: #d52b1e
+
+    li.active:before
+      content: none
+
 
   .carousel-product-block:hover .carousel-product-block-cart
     display: block
@@ -431,3 +457,33 @@ header
           display: block
           background: url("../img/wishlist.png")
           background-position: 0px
+.main-page-brands
+  padding: 60px 0px 60px 0px
+  background-color:  #f1f1f1
+
+  h2
+    margin-top: 0px
+    padding-top: 0px
+    font-family: $font-heavy
+    text-transform: uppercase
+    padding-bottom: 20px
+    border-bottom: 2px solid  #000000
+    color:  #000000
+    font-size: 24px
+    font-weight: 800
+    text-align: left
+  .nav-tabs
+    border: 0px
+  .nav-tabs>li.active>a
+    border: 0px
+    background: 0
+  li a
+    font-family: FuturaPT
+    color:  #bebebe
+    font-size: 20px
+    font-weight: 300
+    text-align: left
+    padding: 0px
+  li a:hover
+    border: 0px
+    background: none
