--- a/app/css/style.css
+++ b/app/css/style.css
@@ -210,8 +210,9 @@ header {
   text-decoration: none; }
 
 .carousel {
-  height: 500px;
   border-radius: 50%; }
+  .carousel .carousel-inner {
+    padding-bottom: 100px; }
   .carousel .carousel-indicators li {
     border-width: 2px;
     border-color: #cccccc;
@@ -473,14 +474,24 @@ header {
     border: 0px; }
   .main-page-brands .nav-tabs > li.active > a {
     border: 0px;
-    background: 0; }
+    background: 0;
+    color: white; }
+  .main-page-brands li.active {
+    background: #df2400; }
+  .main-page-brands li {
+    display: flex;
+    margin-right: 20px;
+    width: 20px;
+    height: 30px; }
   .main-page-brands li a {
     font-family: FuturaPT;
     color: #bebebe;
-    font-size: 20px;
+    font-size: 14px;
     font-weight: 300;
     text-align: left;
-    padding: 0px; }
+    padding: 0px;
+    border: 0px;
+    margin: auto; }
   .main-page-brands li a:hover {
     border: 0px;
     background: none; }
