--- a/src/style.sass
+++ b/src/style.sass
@@ -194,8 +194,9 @@ header
     text-decoration: none
 
 .carousel
-  height: 500px
   border-radius: 50%
+  .carousel-inner
+    padding-bottom: 100px
   .carousel-indicators li
     border-width: 2px
     border-color:  rgb(204, 204, 204)
@@ -477,13 +478,24 @@ header
   .nav-tabs>li.active>a
     border: 0px
     background: 0
+    color: white
+  li.active
+    background: $primary-color
+
+  li
+    display: flex
+    margin-right: 20px
+    width: 20px
+    height: 30px
   li a
     font-family: FuturaPT
     color:  #bebebe
-    font-size: 20px
+    font-size: 14px
     font-weight: 300
     text-align: left
     padding: 0px
+    border: 0px
+    margin: auto
   li a:hover
     border: 0px
     background: none
