--- a/src/style.sass
+++ b/src/style.sass
@@ -8,494 +8,18 @@ $background:  #f1f1f1
 ul
   -webkit-padding-start: 0px
   margin-bottom: 0
-
+a
+  text-decoration: none
+  color: inherit
+  &:hover
+    text-decoration: none
+    color: inherit
+  &:active
+    color: inherit
+    text-decoration: none
 *
   outline: none
 
-header
-  height: 216px
-  box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.15)
 
-.top-bar
-  border-bottom-color: rgba(0, 0, 0, 0.2)
-  border-bottom-style: solid
-  border-bottom-width: 1px
-  height: 56px
-  display: flex
-  align-items: center
-  .row
-    display: flex
-    align-items: center
-.top-logo
-  height: 77px
-  border-bottom-color: rgba(0, 0, 0, 0.2)
-  border-bottom-style: solid
-  border-bottom-width: 1px
-  display: flex
-  align-items: center
-
-.top-menu
-  height: 83px
-  display: flex
-  align-items: center
-.top-menu .row
-  display: flex
-  align-items: center
-
-.search
-  position: relative
-  input[type="text"]
-    border-radius: 2px
-    border-width: 1px
-    border-color:  #cccccc
-    border-style: solid
-    background-color:  #fefefe
-    width: 100%
-    height: 38px
-  input[type="submit"]
-    position: absolute
-    border: 0px
-    background: url(../img/search.png)60%
-    width: 25px
-    height: 23px
-    background-size: 130%
-    top: 7px
-    left: 25px
-
-.menu ul li
-  list-style: none
-  font-family: $font-heavy
-  color:  #000000
-  font-size: 15px
-  font-weight: 800
-  text-align: left
-  text-transform: uppercase
-
-.menu ul li:hover
-  color: $primary-color
-  cursor: pointer
-
-.menu ul
-  display: flex
-  justify-content: space-between
-  align-items: center
-
-.cart-favorite
-  display: flex
-  justify-content: space-between
-
-  div
-    width: 27px
-    height: 24px
-  .cart
-    background: url("../img/cart_ico.png")
-  .favorite
-    background: url("../img/cart_ico.png")
-    background-position: 100%
-
-
-.phones ul
-  display: flex
-  justify-content: space-between
-  .vel:before
-    content: ''
-    width: 18px
-    height: 18px
-    background: url("../img/header-ico.png")
-    margin-right: 7px
-    background-position-x: -135px
-  .mts:before
-    content: ''
-    width: 18px
-    height: 18px
-    background: url("../img/header-ico.png")
-    background-position-y: -2px
-    margin-right: 7px
-
-  li
-    font-family: $font-main
-    color:  #000000
-    font-size: 14px
-    font-weight: 300
-    text-align: left
-    list-style: none
-    display: flex
-
-.viber-skype
-  ul
-    display: flex
-    justify-content: space-around
-    li
-      list-style: none
-      display: flex
-      align-items: center
-      justify-content: center
-    li:before
-      content: ''
-      display: block
-      width: 23px
-      height: 23px
-      margin-right: 7px
-    .viber:before
-      background: url("../img/header-ico.png")
-      background-position-x: -298px
-    .skype:before
-      background: url("../img/header-ico.png")
-      background-position-x: -380px
-    .email:before
-        background: url("../img/header-ico.png")
-        background-position-x: -463px
-.work-time
-  font-family: FuturaPTBook
-  color:  #000000
-  font-size: 16px
-  font-weight: 300
-
-  div
-    display: flex
-    justify-content: center
-
-  div:before
-    content: ''
-    width: 20px
-    height: 20px
-    background: url("../img/header-ico.png")
-    background-position-x: -702px
-    background-position-y: -1px
-    margin-right: 7px
-.login-register
-  div
-    display: flex
-    font-family: FuturaPTBook
-    color:  #000000
-    font-size: 16px
-    font-weight: 300
-    justify-content: center
-    height: 29px
-    align-items: center
-    transition: 0.5s
-    a
-      color:  #000000
-      text-decoration: none
-  div:before
-    content: ''
-    width: 20px
-    height: 20px
-    background: url("../img/header-ico.png")
-    background-position-x: 100%
-    background-position-y: -1px
-    margin-right: 7px
-  div:hover
-    border-radius: 2px
-    border-width: 1px
-    border-color:  #7f7f7f
-    border-style: solid
-    background-color:  #f6f6f6
-    text-decoration: none
-
-.carousel
-  border-radius: 50%
-  .carousel-inner
-    padding-bottom: 100px
-  .carousel-indicators li
-    border-width: 2px
-    border-color:  rgb(204, 204, 204)
-    border-style: solid
-    background-color:  #ffffff
-    width: 18px
-    height: 18px
-    box-sizing: border-box
-    margin: 0px 15px
-
-
-  .carousel-indicators li.active:before
-    content: ''
-    border-radius: 50%
-    background-color:  #df2400
-    width: 10px
-    height: 10px
-    display: block
-    opacity: 1
-    margin: 2px 2px
-  .carousel-caption
-    text-shadow: none
-    h3
-      font-family: FuturaPTHeavy
-      color:  #000000
-      font-size: 35.99px
-      font-weight: 800
-      line-height: 48px
-    p
-      font-family: 'FuturaPTLight'
-      color:  #000000
-      font-size: 22px
-      font-weight: 300
-      line-height: 24px
-    a
-      border-radius: 3px
-      font-family: FuturaPTExtraBold
-      background-color:  #d52b1e
-      width: 119px
-      height: 37px
-      color: white
-      display: block
-      text-align: center
-      line-height: 37px
-      text-decoration: none
-      text-transform: uppercase
-      font-size: 12px
-  .guitar
-    right: 0
-    left: 50%
-    max-width: 400px
-    text-align: left
-    top: 50%
-    bottom: auto
-    transform: translateY(-50%)
-
-.caption
-  font-family: $font-main
-  color:  #d62718
-  font-size: 24px
-  font-weight: 300
-  text-transform: uppercase
-  padding: 0px
-  margin: 60px 0px 40px 0px
-
-.main-page-catalog
-  background: #ebebeb
-  .catalog-block
-    border-radius: 4px
-    background-color:  #ffffff
-    max-width: 277px
-    height: 277px
-    margin-right: 20px
-    margin-bottom: 20px
-    position: relative
-    .catalog-block-caption
-      font-family: $font-main
-      color:  #000000
-      font-size: 18px
-      font-weight: 300
-      line-height: 21px
-      position: absolute
-      left: 17px
-      top: 15px
-      z-index: 10
-      max-width: 10em
-      text-transform: uppercase
-    .img
-      position: absolute
-      transform: translate(-50%, -50%)
-      left: 50%
-      top: 50%
-      z-index: 5
-
-  .catalog-block:hover .catalog-block-caption
-    color: $primary-color
-    transition: 0.5s
-
-  .catalog-block:nth-child(5),.catalog-block:nth-child(9),.catalog-block:nth-child(13)
-    margin-right: 0px
-  .catalog-block:last-of-type
-    margin-bottom: 60px
-
-.main-page-carousel
-  .carousel-inner
-    margin-top: 40px
-
-  .item-container
-    display: flex
-    justify-content: space-between
-
-  .carousel-indicators
-    left: 0
-    width: 100%
-    margin-left: 0px
-    display: flex
-    top: 0px
-    position: static
-    li
-      border-radius: 0px
-      height: 2px
-      background: #000000
-      margin: 0
-      border: 0px
-      padding: 0
-      display: inline-block
-      width: 55%
-    li.active
-      background: #d52b1e
-
-    li.active:before
-      content: none
-
-
-  .carousel-product-block:hover .carousel-product-block-cart
-    display: block
-
-  .carousel-product-block:hover
-    -webkit-box-shadow: 0px 6px 9px -1px rgba(0,0,0,0.75)
-    -moz-box-shadow: 0px 6px 9px -1px rgba(0,0,0,0.75)
-    box-shadow: 0px 6px 9px -1px rgba(0,0,0,0.75)
-    height: auto
-
-  .carousel-product-block
-    border-radius: 2px
-    border-width: 1px
-    border-color:  #cccccc
-    border-style: solid
-    width: 216px
-    height: 360px
-    transition: all 1s
-
-
-    a
-      text-decoration: none
-
-    .carousel-product-block-img
-      display: flex
-      justify-content: center
-      align-items: center
-      padding: 10px 0px
-      position: relative
-
-      .carousel-product-block-img-action
-        height: 49px
-        width: 49px
-        background: url("../img/main-carousel/Vector Smart Object.png")
-        display: flex
-        justify-content: center
-        align-items: center
-        font-family: $font-main
-        color:  #ffffff
-        font-size: 14px
-        font-weight: 300
-        position: absolute
-        left: 10px
-        bottom: 10px
-
-    .carousel-product-block-caption
-      background-color:  #e3462c
-      height: 24px
-      padding-left: 1.5em
-      font-family: FuturaPTBook
-      color:  #ffffff
-      font-size: 13px
-      font-weight: 300
-      text-transform: uppercase
-      line-height: 24px
-
-    .carousel-product-block-info
-      margin-left: 1.5em
-      max-width: 160px
-      word-break: break-all
-      margin-top: 20px
-      margin-bottom: 10px
-      font-family: Roboto
-      color:  #000000
-      font-size: 14px
-      font-weight: 400
-      line-height: 21px
-      text-align: left
-
-    .carousel-product-block-price
-      margin-left: 1.5em
-      margin-top: 10px
-      margin-bottom: 10px
-
-      .discount-price
-        font-family: $font-main
-        color:  $primary-color
-        font-size: 16px
-        font-weight: 300
-        text-align: left
-
-      .old-price
-        font-family: $font-main
-        color:  #1c1f1f
-        font-size: 16px
-        font-weight: 300
-        text-decoration: line-through
-        margin-left: 1em
-
-  .carousel-product-block-cart
-    border-bottom-left-radius: 2px
-    border-bottom-right-radius: 2px
-    background-color:  #f2f2f2
-    height: 40px
-    display: none
-    .hover-block
-      display: flex
-      height: 100%
-      li
-        width: 34%
-        list-style: none
-        border-right: solid 1px rgba(204, 204, 204, 0.5)
-        display: flex
-        justify-content: center
-        align-items: center
-      .add-to-compare
-        border-right: 0px
-        span
-          width: 18px
-          height: 20px
-          display: block
-          background: url("../img/wishlist.png")
-          background-position: 100% -1px;
-      .add-to-cart
-        span
-          width: 23px
-          height: 23px
-          display: block
-          background: url("../img/wishlist.png")
-          background-position: -71px
-
-      .add-to-favorite
-        span
-          width: 23px
-          height: 23px
-          display: block
-          background: url("../img/wishlist.png")
-          background-position: 0px
-.main-page-brands
-  padding: 60px 0px 60px 0px
-  background-color:  #f1f1f1
-
-  h2
-    margin-top: 0px
-    padding-top: 0px
-    font-family: $font-heavy
-    text-transform: uppercase
-    padding-bottom: 20px
-    border-bottom: 2px solid  #000000
-    color:  #000000
-    font-size: 24px
-    font-weight: 800
-    text-align: left
-  .nav-tabs
-    border: 0px
-  .nav-tabs>li.active>a
-    border: 0px
-    background: 0
-    color: white
-  li.active
-    background: $primary-color
-
-  li
-    display: flex
-    margin-right: 20px
-    width: 20px
-    height: 30px
-  li a
-    font-family: FuturaPT
-    color:  #bebebe
-    font-size: 14px
-    font-weight: 300
-    text-align: left
-    padding: 0px
-    border: 0px
-    margin: auto
-  li a:hover
-    border: 0px
-    background: none
+@import "main-page"
+@import "product"
