--- a/src/style.sass
+++ b/src/style.sass
@@ -8,9 +8,13 @@ $background:  #f1f1f1
 ul
   -webkit-padding-start: 0px
   margin-bottom: 0
+li
+  font-family: inherit
 a
   text-decoration: none
   color: inherit
+  font-family: inherit
+
   &:hover
     text-decoration: none
     color: inherit
@@ -19,7 +23,8 @@ a
     text-decoration: none
 *
   outline: none
-
+span
+  font-family: $font-main
 
 @import "main-page"
 @import "product"
