--- a/src/_product.sass
+++ b/src/_product.sass
@@ -205,6 +205,7 @@
       cursor: pointer
       font-size: 16px
       margin-right: 1em
+      margin-bottom: 30px
 
     object
       width: 25px
@@ -220,8 +221,83 @@
     .twit
       span
         color: #1da1f2
+  .info-block
+    color: #000
+    font-family: Roboto
+    font-size: 16px
+  .video-block
+    margin: 35px 0em
+    iframe
+      border: 6px solid #d52b1d
+.product-block-photo-char
+  padding-right: 35px
+  .main-photo
+    img
+      max-width: 100%
+      outline: none
+  .other-photo
+    margin: 40px 0px
+    display: flex
+    a
+      img
+        max-width: 80px
+        margin-right: 25px
 
+  .charat
+    .header
+      border-top: 2px solid #cccccc
+      border-bottom:  2px solid #cccccc
+      margin-bottom: 0.5em
+    h3
+      color: #000
+      font-family: FuturaPTBook
+      font-size: 16px
+      display: inline-block
+      line-height: 35px
+      margin: 0px 15px 0px 0px
+    table
+      width: 100%
+      tr
+        border-bottom: 1px solid #cccccc
+        line-height: 35px
+        td:first-of-type
+          font-size: 14px
+          text-transform: uppercase
+        td:last-of-type
+          font-size: 18px
+          font-family: FuturaPTBook
+  .question-block
+    margin-top: 40px
+    border: 3px solid  #d0e9fa
+    padding: 30px 30px
+    h3
+      color: #d42b1e
+      font-family: $font-main
+      font-size: 24px
+    form
+      font-family: $font-main
+      color: white
+      input,textarea
+        background: #f9f9f9
+        border: 1px solid #dbdbdb
+        width: 100%
+        margin-bottom: 11px
+        padding: 13px
+        color: black
+        font-family: FuturaPTBook
+        &.placeholder
+          color: red
 
+      input[type='submit']
+        width: 230px
+        height: 48px
+        background-color: #434343
+        color: white
+        border: 0px
+        font-family: $font-main
+        transition: all 1s
+        &:hover
+          background: $primary-color
 
 
 
