--- a/app/css/style.css
+++ b/app/css/style.css
@@ -933,6 +933,8 @@ footer {
     border-top: 2px solid #cccccc;
     border-bottom: 2px solid #cccccc;
     margin-bottom: 0.5em; }
+    .product-block-photo-char .charat .header .active h3 {
+      border-bottom: 1px solid black; }
   .product-block-photo-char .charat h3 {
     color: #000;
     font-family: FuturaPTBook;
@@ -940,6 +942,12 @@ footer {
     display: inline-block;
     line-height: 35px;
     margin: 0px 15px 0px 0px; }
+    .product-block-photo-char .charat h3:active {
+      color: inherit;
+      text-decoration: none; }
+    .product-block-photo-char .charat h3 a {
+      text-decoration: none;
+      color: inherit; }
   .product-block-photo-char .charat table {
     width: 100%; }
     .product-block-photo-char .charat table tr {
@@ -958,7 +966,8 @@ footer {
     .product-block-photo-char .question-block h3 {
       color: #d42b1e;
       font-family: FuturaPT;
-      font-size: 24px; }
+      font-size: 24px;
+      margin-bottom: 1em; }
     .product-block-photo-char .question-block form {
       font-family: FuturaPT;
       color: white; }
@@ -982,3 +991,58 @@ footer {
         transition: all 1s; }
         .product-block-photo-char .question-block form input[type='submit']:hover {
           background: #df2400; }
+
+#feedbacks .feedback-list .feedback-header {
+  height: 32px;
+  border-top: 1px solid #cccccc;
+  background: #f2f2f2;
+  padding: 0px 15px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center; }
+  #feedbacks .feedback-list .feedback-header .feedback-author {
+    color: #d42b1e;
+    font-family: FuturaPT;
+    font-size: 12px; }
+  #feedbacks .feedback-list .feedback-header .feedback-date {
+    color: #bfbfbf;
+    font-size: 10px;
+    font-family: FuturaPTBook; }
+
+#feedbacks .feedback-list .feedback-body {
+  margin: 15px 0px;
+  font-family: FuturaPTBook;
+  font-size: 16px; }
+
+#feedbacks .feedback-list .feedback-element:last-of-type {
+  padding-bottom: 1em;
+  border-bottom: 1px solid #cccccc;
+  margin-bottom: 40px; }
+
+#feedbacks form {
+  padding: 30px;
+  background: #f7f7f7;
+  border: 1px solid #d0d0d0; }
+  #feedbacks form input, #feedbacks form textarea {
+    background: #ffffff;
+    border: 1px solid #dbdbdb;
+    width: 100%;
+    margin-bottom: 11px;
+    padding: 13px;
+    color: black;
+    font-family: FuturaPTBook; }
+  #feedbacks form input[type='submit'] {
+    width: 230px;
+    height: 48px;
+    background-color: #434343;
+    color: white;
+    border: 0px;
+    font-family: FuturaPT;
+    transition: all 1s; }
+    #feedbacks form input[type='submit']:hover {
+      background: #df2400; }
+  #feedbacks form h3 {
+    color: #1b1f1f;
+    font-family: FuturaPT;
+    font-size: 24px;
+    margin-bottom: 20px; }
