--- a/src/_product.sass
+++ b/src/_product.sass
@@ -248,6 +248,9 @@
       border-top: 2px solid #cccccc
       border-bottom:  2px solid #cccccc
       margin-bottom: 0.5em
+      .active
+        h3
+          border-bottom: 1px solid black
     h3
       color: #000
       font-family: FuturaPTBook
@@ -255,6 +258,12 @@
       display: inline-block
       line-height: 35px
       margin: 0px 15px 0px 0px
+      &:active
+        color: inherit
+        text-decoration: none
+      a
+        text-decoration: none
+        color: inherit
     table
       width: 100%
       tr
@@ -274,6 +283,7 @@
       color: #d42b1e
       font-family: $font-main
       font-size: 24px
+      margin-bottom: 1em
     form
       font-family: $font-main
       color: white
@@ -298,6 +308,62 @@
         transition: all 1s
         &:hover
           background: $primary-color
+#feedbacks
+  .feedback-list
+    .feedback-header
+      height: 32px
+      border-top: 1px solid #cccccc
+      background: #f2f2f2
+      padding: 0px 15px
+      display: flex
+      justify-content: space-between
+      align-items: center
+      .feedback-author
+        color: #d42b1e
+        font-family: FuturaPT
+        font-size: 12px
+      .feedback-date
+        color: #bfbfbf
+        font-size: 10px
+        font-family: FuturaPTBook
+    .feedback-body
+      margin: 15px 0px
+      font-family: FuturaPTBook
+      font-size: 16px
+    .feedback-element
+      &:last-of-type
+        padding-bottom: 1em
+        border-bottom: 1px solid #cccccc
+        margin-bottom: 40px
+
+  form
+      padding: 30px
+      background: #f7f7f7
+      border: 1px solid #d0d0d0
+      input,textarea
+        background: #ffffff
+        border: 1px solid #dbdbdb
+        width: 100%
+        margin-bottom: 11px
+        padding: 13px
+        color: black
+        font-family: FuturaPTBook
+      input[type='submit']
+        width: 230px
+        height: 48px
+        background-color: #434343
+        color: white
+        border: 0px
+        font-family: FuturaPT
+        transition: all 1s
+        &:hover
+          background: $primary-color
+
+      h3
+        color: #1b1f1f
+        font-family: $font-main
+        font-size: 24px
+        margin-bottom: 20px
 
 
 
