--- a/src/_fonts.sass
+++ b/src/_fonts.sass
@@ -2,6 +2,9 @@
   font-family: "FuturaPT"
   src : url("/fonts/FuturaPTDemi.otf")
 @font-face
+  font-family: "FuturaPTMedium"
+  src : url("/fonts/FuturaPTMedium.otf")
+@font-face
   font-family: "FuturaPTHeavy"
   src : url("/fonts/FuturaPTHeavy.otf")
 @font-face
