--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1905,3 +1905,40 @@ footer {
     position: absolute;
     right: 0px;
     top: 0px; }
+
+.category {
+  background: #ebebeb;
+  padding: 45px 0px; }
+  .category .column {
+    -moz-column-count: 3;
+    -webkit-column-count: 3;
+    column-count: 3; }
+  .category .two-column {
+    -moz-column-count: 2;
+    -webkit-column-count: 2;
+    column-count: 2; }
+  .category .category-block {
+    background: white;
+    border: 1px solid #dadada;
+    padding: 20px;
+    margin-bottom: 20px;
+    min-height: 215px; }
+    .category .category-block .body {
+      margin-top: 20px; }
+      .category .category-block .body li {
+        list-style: none;
+        line-height: 32px;
+        font-family: FuturaPTBook;
+        font-size: 16px;
+        text-transform: uppercase;
+        color: black; }
+    .category .category-block .header {
+      height: 25px;
+      border-bottom: 1px solid #cccccc; }
+      .category .category-block .header h3 {
+        margin-top: 0px;
+        margin-bottom: 0px;
+        text-transform: uppercase;
+        color: #df2400;
+        font-family: FuturaPT;
+        font-size: 16px; }
