--- a/src/style.sass
+++ b/src/style.sass
@@ -29,6 +29,7 @@ span
 .clear
   clear: both
 
+
 @import "main-page"
 @import "product"
 @import "catalog"
@@ -38,3 +39,4 @@ span
 @import "compare"
 @import "category"
 @import "cabinet"
+@import "login"
