--- a/src/_category.sass
+++ b/src/_category.sass
@@ -37,3 +37,35 @@
         color: #df2400
         font-family: $font-main
         font-size: 16px
+.category-child
+  background: #ebebeb
+  padding: 50px 0px
+  .block
+    padding-left: 0px
+    padding-right: 30px
+    &:nth-child(4n+4)
+      padding-right: 0px
+  .category-child-element
+    background: #fff
+    min-height: 275px
+    position: relative
+    &__title
+      font-family: FuturaPT
+      color: #000000
+      font-size: 18px
+      font-weight: 300
+      line-height: 21px
+      position: absolute
+      left: 17px
+      top: 15px
+      z-index: 10
+      max-width: 10em
+      text-transform: uppercase
+    &__img
+      position: absolute
+      left: 50%
+      top: 50%
+      transform: translate(-50%,-50%)
+      max-height: 170px
+
+
